@@ -1,3 +1,7 @@
+15 June 2006: Wouter
+	- In preparation of notify send overhaul, moved the notify
+	  send code to xfrd-notify.c and h files.
+
 14 June 2006: Wouter
 	- fixed crash bug when dnssec/NSEC enabled and query DNAME
 	  target did not exist.
